# SkiptShell

./: CMakeLists.txt  Errors.cpp  Errors.h  File.cpp  File.h  README.md  String.cpp  String.h  main.cpp
Documentation/: Documentation.cpp  Documentation.h  DocumentationObject.h
Property/: Property.h  PropertyFile.cpp  PropertyFile.h  PropertyReference.cpp  PropertyReference.h
Shell/: Editor.cpp  Editor.h  Lexer.cpp  Lexer.h
